--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sample github action ci/cd",
   "main": "index.js",
   "scripts": {
-    "test:e2e": "cucumber-js --require cucumber.config.js --require tests/acceptance/stepDefinitions/**/*.js --format @cucumber/pretty-formatter"
+    "test:e2e": "cucumber-js --require cucumber.config.js --require tests/acceptance/stepDefinitions/**/*.js --format @cucumber/pretty-formatter",
+    "install-joomla": "cucumber-js --require cucumber.config.js --require tests/acceptance/stepDefinitions/installJoomlaContext.js --format @cucumber/pretty-formatter"
   },
   "repository": {
     "type": "git",
