Added dropbox installation initial setup

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Install joomla with creation of super user
       run: npm run install-joomla tests/acceptance/initialSetup/installJoomla.feature
 
+    - name: Install Dropbox on joomla for running e2e tests
+      run: npm run install-joomla tests/acceptance/initialSetup/dropBoxInstallation.feature
+
     - name: Run tests
       run: npm run test:e2e tests/acceptance/features 
 
